syntax = "proto3";
package main;

import "google/protobuf/empty.proto";

option go_package = "./";

message Song {
  int32 id = 1;
  string title = 2;
  string artist = 3;
  int32 release_year = 4;
}

message Id {
  int32 value = 1;
}

service SongService {
  rpc GetAllSongs(google.protobuf.Empty) returns (stream Song) {}
  rpc CreateSong(Song) returns (Song) {}
  rpc UpdateSong(Song) returns (Song) {}
  rpc GetSong(Id) returns (Song) {}
  rpc DeleteSong(Id) returns (Song) {}
}
